--- a/index.html
+++ b/index.html
@@ -6,4 +6,17 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
+<body>
+<h1>PORTFOLIO.</h1>
+<h2>Projects.</h2>
+<ol>
+    <li>Sex-Education.</li>
+    <p>This was my first project I did. A webpage with full information on what you need to know on sex education. The languages used; HTML and CSS.
+        You can follow the link for more information.</p>
+        <a href="https://emmanuel1738.github.io/sex-education/">Sex-Education.</a>
+        <li>Student-feedback.</li>
+        <p>This was my second project which we did as a team of four collaborators. We basically structured a webpage to help an institution to collect data from the students. The languages we managed to use were; HTML, CSS and we embedded a little bit of Javascript. For more information click the link below.</p>
+        <a href="https://benardbett.github.io/student-feedback/">Student-feedback.</a>
+    </body>
+</html>
 </html>
