--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
 <h1>PORTFOLIO.</h1>
+<div class="row">
+    <div class="column">
+      <div class="content">
+        <h3>About Me</h3>
+        <p>Currently a moringa student.</p>
+        <img src="images/aboutme.jpg" alt="Profile" style="width:30%">
+      </div>
+    </div>
 <h2>Projects.</h2>
 <ol>
     <li>Sex-Education.</li>
