--- a/index.html
+++ b/index.html
@@ -8,15 +8,34 @@
 </head>
 <body>
 <h1>PORTFOLIO.</h1>
-<div class="row">
-    <div class="column">
-      <div class="content">
-        <h3>About Me</h3>
-        <p>Currently a moringa student.</p>
-        <img src="images/aboutme.jpg" alt="Profile" style="width:30%">
-      </div>
+<h2>About Me</h2>
+<div>
+    <ul>
+    <li>Background.</li>
+    </ul>
+    <p>My name is Emmanuel Bett, currently a Moringa student persuing programming. I finished my form four in the year 2016, where I excelled with good grades. Why Moringa? Well, having passion with electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</p>
+    <ul>
+      <li>Hobbies.</li>
+    </ul>
+    <p>I believe I am an exrovert, I do love travelling a lot and making new friends. I do play games; FIFA, Need For Speed just to mention a few and I also like cooking.</p>
+    <ul>
+      <li>
+        Profile.
+      </li>
+    </ul><img src="images/aboutme.jpg" alt="Profile" style="width:100%">
+    <ul>
+      <li>
+        Spirit Animal
+      </li>
+    </ul>
+    <p>
+      If I were an animal, I would love to be a dolphin. Why? 
+      Dolphins are extraordinarily intelligent animals who also display culture, something which was long-believed to be unique to humans. They have several highly developed forms of communication and they are also known to stay and help injured individuals, even helping them to the surface to breath. Their compassion also extends across the species-barrier. There are many accounts of dolphins helping humans and even whales. 
+    </p>
+    <img src="images/dolphin.jpeg" alt="Dolphin" style="width:100%">
     </div>
-<h2>Projects.</h2>
+<h3>Projects.</h3>
+<div>
 <ol>
     <li>Sex-Education.</li>
     <p>This was my first project I did. A webpage with full information on what you need to know on sex education. The languages used; HTML and CSS.
@@ -25,6 +44,8 @@
         <li>Student-feedback.</li>
         <p>This was my second project which we did as a team of four collaborators. We basically structured a webpage to help an institution to collect data from the students. The languages we managed to use were; HTML, CSS and we embedded a little bit of Javascript. For more information click the link below.</p>
         <a href="https://benardbett.github.io/student-feedback/">Student-feedback.</a>
-    </body>
+      </ol>
+    </div>
+  </body>
 </html>
 </html>
