--- a/index.html
+++ b/index.html
@@ -11,21 +11,22 @@
 <h2>About Me</h2>
 <div>
     <ul>
-    <li>Background.</li>
+    <li><span>Background.</span>
+    </li>
     </ul>
     <p>My name is Emmanuel Bett, currently a Moringa student persuing programming. I finished my form four in the year 2016, where I excelled with good grades. Why Moringa? Well, having passion with electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</p>
     <ul>
-      <li>Hobbies.</li>
+      <li><span>Hobbies.</span></li>
     </ul>
     <p>I believe I am an exrovert, I do love travelling a lot and making new friends. I do play games; FIFA, Need For Speed just to mention a few and I also like cooking.</p>
     <ul>
       <li>
-        Profile.
+        <span>Profile.</span>
       </li>
     </ul><img src="images/aboutme.jpg" alt="Profile" style="width:100%">
     <ul>
       <li>
-        Spirit Animal
+       <span>Spirit Animal.</span>
       </li>
     </ul>
     <p>
@@ -37,11 +38,11 @@
 <h3>Projects.</h3>
 <div>
 <ol>
-    <li>Sex-Education.</li>
+    <li><span>Sex-Education.</span></li>
     <p>This was my first project I did. A webpage with full information on what you need to know on sex education. The languages used; HTML and CSS.
         You can follow the link for more information.</p>
         <a href="https://emmanuel1738.github.io/sex-education/">Sex-Education.</a>
-        <li>Student-feedback.</li>
+        <li><span>Student-feedback.</span></li>
         <p>This was my second project which we did as a team of four collaborators. We basically structured a webpage to help an institution to collect data from the students. The languages we managed to use were; HTML, CSS and we embedded a little bit of Javascript. For more information click the link below.</p>
         <a href="https://benardbett.github.io/student-feedback/">Student-feedback.</a>
       </ol>
