--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <li><span>Background.</span>
     </li>
     </ul>
-    <p>My name is Emmanuel Bett, currently a Moringa student persuing programming. I finished my form four in the year 2016, where I excelled with good grades. Why Moringa? Well, having passion with electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</p>
+    <p>My name is Emmanuel Bett, currently a Moringa student persuing programming. I finished my form four in the year 2016, where I excelled with good grades. Why Moringa? Well, having passion in electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</p>
     <ul>
       <li><span>Hobbies.</span></li>
     </ul>
@@ -23,7 +23,7 @@
       <li>
         <span>Profile.</span>
       </li>
-    </ul><img src="images/aboutme.jpg" alt="Profile" style="width:100%">
+    </ul><img id="Profile" src="images/aboutme.jpg" alt="Profile">
     <ul>
       <li>
        <span>Spirit Animal.</span>
@@ -33,7 +33,7 @@
       If I were an animal, I would love to be a dolphin. Why? 
       Dolphins are extraordinarily intelligent animals who also display culture, something which was long-believed to be unique to humans. They have several highly developed forms of communication and they are also known to stay and help injured individuals, even helping them to the surface to breath. Their compassion also extends across the species-barrier. There are many accounts of dolphins helping humans and even whales. 
     </p>
-    <img src="images/dolphin.jpeg" alt="Dolphin" style="width:100%">
+    <img id="Dolphin" src="images/dolphin.jpeg" alt="Dolphin">
     </div>
 <h3>Projects.</h3>
 <div>
