changed live link on README.md

--- a/index.html
+++ b/index.html
@@ -10,36 +10,36 @@
 <h1>PORTFOLIO.</h1>
 <h2>About Me</h2>
 <div>
-    <ul>
+  <ul>
     <li><span>Background.</span>
     </li>
-    </ul>
-    <p>My name is Emmanuel Bett, currently a Moringa student persuing programming. I finished my form four in the year 2016, where I excelled with good grades. Why Moringa? Well, having passion in electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</p>
-    <ul>
-      <li><span>Hobbies.</span></li>
-    </ul>
-    <p>I believe I am an exrovert, I do love travelling a lot and making new friends. I do play games; FIFA, Need For Speed just to mention a few and I also like cooking.</p>
-    <ul>
-      <li>
-        <span>Profile.</span>
-      </li>
-    </ul><img id="Profile" src="images/aboutme.jpg" alt="Profile">
-    <ul>
-      <li>
-       <span>Spirit Animal.</span>
-      </li>
-    </ul>
-    <p>
-      If I were an animal, I would love to be a dolphin. Why? 
+  </ul>
+  <p>My name is Emmanuel Bett, currently a Moringa student persuing programming. I finished my form four in the year 2016, where I excelled with good grades. Why Moringa? Well, having passion in electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</p>
+  <ul>
+    <li><span>Hobbies.</span></li>
+  </ul>
+  <p>I believe I am an exrovert, I do love travelling a lot and making new friends. I do play games; FIFA, Need For Speed just to mention a few and I also like cooking.</p>
+  <ul>
+    <li>
+      <span>Profile.</span>
+    </li>
+  </ul><img id="Profile" src="images/aboutme.jpg" alt="Profile">
+  <ul> 
+    <li>
+    
+    </li><span>Spirit Animal.</span>
+  </li>
+</ul>
+<p>If I were an animal, I would love to be a dolphin. Why? 
       Dolphins are extraordinarily intelligent animals who also display culture, something which was long-believed to be unique to humans. They have several highly developed forms of communication and they are also known to stay and help injured individuals, even helping them to the surface to breath. Their compassion also extends across the species-barrier. There are many accounts of dolphins helping humans and even whales. 
     </p>
     <img id="Dolphin" src="images/dolphin.jpeg" alt="Dolphin">
-    </div>
-<h3>Projects.</h3>
-<div>
-<ol>
-    <li><span>Sex-Education.</span></li>
-    <p>This was my first project I did. A webpage with full information on what you need to know on sex education. The languages used; HTML and CSS.
+  </div>
+  <h3>Projects.</h3>
+  <div>
+    <ol>
+      <li><span>Sex-Education.</span></li>
+      <p>This was my first project I did. A webpage with full information on what you need to know on sex education. The languages used; HTML and CSS.
         You can follow the link for more information.</p>
         <a href="https://emmanuel1738.github.io/sex-education/">Sex-Education.</a>
         <li><span>Student-feedback.</span></li>
