updated my background information

--- a/index.html
+++ b/index.html
@@ -8,17 +8,31 @@
 </head>
 <body>
 <h1>PORTFOLIO.</h1>
-<h2>About Me</h2>
+<h2>About Me.</h2>
 <div>
   <ul>
     <li><span>Background.</span>
     </li>
   </ul>
-  <p>My name is Emmanuel Bett, currently a Moringa student persuing programming. I finished my form four in the year 2016, where I excelled with good grades. Why Moringa? Well, having passion in electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</p>
+  <ul>
+    <li>Education.</li>
+  </ul>
+  <p>My name is Emmanuel Bett, currently a Moringa student persuing programming. My Educational journey has been a good one, did my KCPE examinations in the year 2012 where I managed to score 387 marks. I joined Kapsabet Boys High School. Did my form four in the year 2016 where I excelled with good grades. After my form four education, I joined Kreston College where I managed to get computer packages certificate. I later joined JKUAT for a degree course; Business Computing, I'm yet to complete.</p>
+  <ul>
+    <li>
+      Job Experience.
+    </li>
+  </ul>
+  <p>Having gained skills in computer and its related fieds, I got employed as a partime employee in a local cyber, I worked there for 6 months.
+  </p>
+  <ul>
+    <li>Why Programming?</li>
+    <P>Why Moringa? Well, having passion in electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</P>
+  </ul>
   <ul>
     <li><span>Hobbies.</span></li>
   </ul>
-  <p>I believe I am an exrovert, I do love travelling a lot and making new friends. I do play games; FIFA, Need For Speed just to mention a few and I also like cooking.</p>
+  <p>I believe I am an exrovert, I do love travelling a lot and making new friends. One of my interests is I do love community service; I am a member of a charity foundation to help mostly the less fortunate. For sports I love football and table tennis, I also play video games; FIFA, Need For Speed just to mention a few and I also love cooking.</p>
   <ul>
     <li>
       <span>Profile.</span>
