updated my contact information

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   </p>
   <ul>
     <li>Why Programming?</li>
-    <P>Why Moringa? Well, having passion in electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</P>
+    <p>Why Moringa? Well, having passion in electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</p>
   </ul>
   <ul>
     <li><span>Hobbies.</span></li>
@@ -37,6 +37,15 @@
     <li>
       <span>Profile.</span>
     </li>
+  </ul>
+  <ul>
+    <li>Contact Details.</li>
+    <ol>
+      <li>Email:</li><p>Emmanuelbett13@gmail.com</p>
+      <li>Facebook:</li><p>Emmanuel Bett</p>
+      <li>Twitter:</li><p>Emmanuel1738</p>
+      <li>Phone Number:</li><p>0797167215</p>
+    </ol>
   </ul><img id="Profile" src="images/aboutme.jpg" alt="Profile">
   <ul> 
     <li>
