added more information on projects

--- a/index.html
+++ b/index.html
@@ -39,18 +39,21 @@
     </li>
   </ul>
   <ul>
+    <li>My Photo.</li>
+  </ol>
+  <img id="Profile" src="images/aboutme.jpg" alt="Profile">
+  <ul>
     <li>Contact Details.</li>
     <ol>
-      <li>Email:</li><p>Emmanuelbett13@gmail.com</p>
-      <li>Facebook:</li><p>Emmanuel Bett</p>
-      <li>Twitter:</li><p>Emmanuel1738</p>
-      <li>Phone Number:</li><p>0797167215</p>
+      <li>Email:</li><p>Emmanuelbett13@gmail.com.</p>
+      <li>Facebook:</li><p>Emmanuel Bett.</p>
+      <li>Twitter:</li><p>Emmanuel1738.</p>
+      <li>Phone Number:</li><p>0797167215.</p>
     </ol>
-  </ul><img id="Profile" src="images/aboutme.jpg" alt="Profile">
+  </ul>
+  </ol>
   <ul> 
-    <li>
-    
-    </li><span>Spirit Animal.</span>
+    <li><span>Spirit Animal.</span>
   </li>
 </ul>
 <p>If I were an animal, I would love to be a dolphin. Why? 
@@ -62,7 +65,7 @@
   <div>
     <ol>
       <li><span>Sex-Education.</span></li>
-      <p>This was my first project I did. A webpage with full information on what you need to know on sex education. The languages used; HTML and CSS.
+      <p>This was my first project I did in Moringa Pre-prep program. A webpage with full information on what you need to know on sex education. The page has details on sex education and the information present has been divided into groups, in such a way that age and gender are factors. The languages used are HTML and CSS.
         You can follow the link for more information.</p>
         <a href="https://emmanuel1738.github.io/sex-education/">Sex-Education.</a>
         <li><span>Student-feedback.</span></li>
