used em and strong tags

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <ul>
     <li>Education.</li>
   </ul>
-  <p>My name is Emmanuel Bett, currently a Moringa student persuing programming. My Educational journey has been a good one, did my KCPE examinations in the year 2012 where I managed to score 387 marks. I joined Kapsabet Boys High School. Did my form four in the year 2016 where I excelled with good grades. After my form four education, I joined Kreston College where I managed to get computer packages certificate. I later joined JKUAT for a degree course; Business Computing, I'm yet to complete.</p>
+  <p>My name is <strong>Emmanuel Bett,</strong> currently a <em>Moringa</em> student persuing programming. My Educational journey has been a good one, did my KCPE examinations in the year 2012 where I managed to score 387 marks. I joined <em>Kapsabet Boys High School</em>. Did my form four in the year 2016 where I excelled with good grades. After my form four education, I joined <em>Kreston College</em> where I managed to get computer packages certificate. I later joined JKUAT for a degree course; Business Computing, I'm yet to complete.</p>
   <ul>
     <li>
       Job Experience.
