added more info on my background

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </p>
       <ul>
         <li>Why Programming?</li>
-        <p>Why Moringa? Well, having passion in electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field.</p>
+        <p>Why Moringa? Well, having passion in electronics and things to do with IT, I wanted to improve my skills and expand my knowledge in this field. And having received good feedback from my peers who have been through Moringa, I am confident that I am in the right place.</p>
       </ul>
       <ul>
         <li><span>Hobbies.</span></li>
